# gh-qwt

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: release.yml
.github/instructions/: actions.instructions.md  docs.instructions.md
.github/workflows/: ci.yml  pages.yml  release.yml
.pages/: README.md  astro.config.mjs  package.json
.pages/scripts/: check-links.ts
.pages/src/: content.config.ts
.pages/src/plugins/: OCTICONS_LICENSE  docs-cleanup.ts  github-alerts.ts
.pages/src/styles/: custom.css  github-alerts.css
.pages/test/: docs-cleanup.test.ts  github-alerts-style.test.ts  github-alerts.test.ts
docs/: README.md
docs/development/: README.md
docs/development/adr/: README.md
docs/development/adr/template/: README.md
docs/development/architecture/: README.md
docs/development/building-and-releasing/: README.md
docs/development/contributing/: README.md
docs/development/specification/: README.md
docs/development/testing/: README.md
docs/guides/: README.md
docs/guides/configuration/: README.md
docs/guides/getting-started/: README.md
docs/guides/shell-integration/: README.md
docs/guides/working-with-worktrees/: README.md
docs/references/: README.md
docs/references/cli/: README.md
docs/references/configuration/: README.md
docs/references/directory-layout/: README.md
docs/references/glossary/: README.md
script/: build.sh  smoke-test.sh
src/: config.rs  error.rs  gh.rs  git.rs  main.rs  repo.rs
src/commands/: add.rs  get.rs  list.rs  mod.rs  path.rs  prune.rs  remove.rs  rm.rs  root.rs
tests/: cli.rs
(+13 files in other folders)
